syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Notification/Support/Grpc/Protos/model.proto";

service HostGradingNotificationGrpcService {
  rpc hostGrading (MessageProto4) returns (MessageResponseProto4);
}